Move inline CSS style into own css file

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		<div class="outer-container">
 			<div class="inner-container">
 				<div class="points">
-					<div><img src="images/coin.png" alt="" width="50px"></div>
-					<span style="font-size: 32px; margin-left: 15px; font-weight: bold" >	{{coinsCounter}}
+					<div><img src="images/coin.png" alt="" width="45px"></div>
+					<span class="coins-counter">	{{coinsCounter}}
 					</span>
 				</div>
 				<div  @animationend="removeAnimation"
